[package]
name = "rusty_pong"
version = "0.1.0"
authors = ["TanTanDev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
bincode = "1.3"  # Phiên bản này có thể thay đổi, bạn có thể kiểm tra phiên bản mới nhất.
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

