[package]
name = "hello_world_001"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
bincode = "1.3"  # Phiên bản này có thể thay đổi, bạn có thể kiểm tra phiên bản mới nhất.
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

